syntax = "proto3";
package graphics_device;

service GraphicsDevice {
    rpc ResizeWindow (ResizeWindowRequest) returns (Empty);
    rpc CloseWindow (Empty) returns (Empty);
}

message Empty {}

message ResizeWindowRequest {
    int32 height = 1;
    int32 width = 2;
}
